--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
 </head>
 <body>
     <h2>Awesome books</h2>
-    <section id="book-list"></section>
+    <section id="book-list">
+
+
+    </section>
+
     <section>
         <form class="add-book">
             <input type="text" id="title" placeholder="title" required><br/><br/>
             <input type="text" id="author" name="author" placeholder="author" required><br/></br>
-            <button>Add</button>
+            <a  id="add-btn">Add</a>
         </form>
     </section>
+    <p id="test"> test</p>
+    <script src="./javascript.js"></script>
 </body>
 </html>
