--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
         <form class="add-book">
             <input type="text" id="title" placeholder="title" required><br/><br/>
             <input type="text" id="author" name="author" placeholder="author" required><br/></br>
-            <a  id="add-btn">Add</a>
+            <button  id="add-btn">Add</button>
         </form>
     </section>
-    <p id="test"> test</p>
     <script src="./javascript.js"></script>
 </body>
 </html>
