--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h2>Awesome books</h2>
+    <div class="container">
+    <h2 class="heading">Awesome books</h2>
     <section id="book-list">
 
 
@@ -21,6 +22,8 @@
             <button  id="add-btn">Add</button>
         </form>
     </section>
+
+</div>
     <script src="./javascript.js"></script>
 </body>
 </html>
