Creat Medium-Fidelity Wireframe Style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-    <h2 class="heading">Awesome books</h2>
+    <h2 class="heading">All awesome books</h2>
     <section id="book-list">
 
 
@@ -17,9 +17,10 @@
 
     <section>
         <form class="add-book">
-            <input type="text" id="title" placeholder="title" required><br/><br/>
-            <input type="text" id="author" name="author" placeholder="author" required><br/></br>
-            <button  id="add-btn">Add</button>
+            <h2 class="heading">Add a new book</h2>
+            <input type="text" id="title" placeholder="title" required>
+            <input type="text" id="author" name="author" placeholder="author" required>
+            <button type="submit"  id="add-btn">Add</button>
         </form>
     </section>
 
