--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <nav>
         <h1>Awesome Books</h1>
-        <a href="">List</a>
+        <a href="#list-section" id="list">List</a>
         <span>|</span>
-        <a href="#">Add New</a>
+        <a href="#add-section" id="add-new">Add New</a>
         <span>|</span>
-        <a href="">Contact</a>
+        <a href="#contact-section" id="contact">Contact</a>
     </nav>
 
     <div class="container">
